// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider component should match snapshot 1`] = `
<View
  testID="wrapper"
>
  <View
    accessibilityRole="adjustable"
    accessibilityValue={
      Object {
        "max": 1,
        "min": 0,
        "now": 0,
      }
    }
    onLayout={[Function]}
    replaceTheme={[Function]}
    style={
      Object {
        "height": 40,
        "justifyContent": "center",
      }
    }
    testID="RNE__Slider_Container"
    theme={
      Object {
        "colors": Object {
          "black": "#242424",
          "disabled": "hsl(208, 8%, 90%)",
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "platform": Object {
            "android": Object {
              "error": "#f44336",
              "grey": "rgba(0, 0, 0, 0.54)",
              "primary": "#2196f3",
              "searchBg": "#dcdce1",
              "secondary": "#9C27B0",
              "success": "#4caf50",
              "warning": "#ffeb3b",
            },
            "default": Object {
              "error": "#ff3b30",
              "grey": "#7d7d7d",
              "primary": "#007aff",
              "searchBg": "#dcdce1",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
            "ios": Object {
              "error": "#ff3b30",
              "grey": "#7d7d7d",
              "primary": "#007aff",
              "searchBg": "#dcdce1",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
            "web": Object {
              "error": "#ff190c",
              "grey": "#393e42",
              "primary": "#2089dc",
              "searchBg": "#303337",
              "secondary": "#ca71eb",
              "success": "#52c41a",
              "warning": "#faad14",
            },
          },
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#ca71eb",
          "success": "#52c41a",
          "warning": "#faad14",
          "white": "#ffffff",
        },
      }
    }
    updateTheme={[Function]}
    value={0}
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "#b3b3b3",
          "borderRadius": 2,
          "height": 4,
        }
      }
      testID="RNE__Slider_Track_maximum"
    />
    <View
      style={
        Object {
          "backgroundColor": "#3f3f3f",
          "borderRadius": 2,
          "height": 0,
          "marginTop": -0,
          "position": "absolute",
          "width": 0,
        }
      }
      testID="RNE__Slider_Track_minimum"
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "red",
          "borderRadius": 20,
          "height": 40,
          "position": "absolute",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
          "width": 40,
        }
      }
      testID="RNE__Slider_Thumb"
    />
    <View
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="RNE__Slider_TouchArea"
    />
  </View>
</View>
`;

exports[`Slider component should render vertically 1`] = `
<View
  testID="wrapper"
>
  <View
    accessibilityRole="adjustable"
    accessibilityValue={
      Object {
        "max": 1,
        "min": 0,
        "now": 0,
      }
    }
    onLayout={[Function]}
    replaceTheme={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "width": 40,
      }
    }
    testID="RNE__Slider_Container"
    theme={
      Object {
        "colors": Object {
          "black": "#242424",
          "disabled": "hsl(208, 8%, 90%)",
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "platform": Object {
            "android": Object {
              "error": "#f44336",
              "grey": "rgba(0, 0, 0, 0.54)",
              "primary": "#2196f3",
              "searchBg": "#dcdce1",
              "secondary": "#9C27B0",
              "success": "#4caf50",
              "warning": "#ffeb3b",
            },
            "default": Object {
              "error": "#ff3b30",
              "grey": "#7d7d7d",
              "primary": "#007aff",
              "searchBg": "#dcdce1",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
            "ios": Object {
              "error": "#ff3b30",
              "grey": "#7d7d7d",
              "primary": "#007aff",
              "searchBg": "#dcdce1",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
            "web": Object {
              "error": "#ff190c",
              "grey": "#393e42",
              "primary": "#2089dc",
              "searchBg": "#303337",
              "secondary": "#ca71eb",
              "success": "#52c41a",
              "warning": "#faad14",
            },
          },
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#ca71eb",
          "success": "#52c41a",
          "warning": "#faad14",
          "white": "#ffffff",
        },
      }
    }
    updateTheme={[Function]}
    value={0}
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "#b3b3b3",
          "borderRadius": 2,
          "flex": 1,
          "width": 4,
        }
      }
      testID="RNE__Slider_Track_maximum"
    />
    <View
      style={
        Object {
          "backgroundColor": "#3f3f3f",
          "borderRadius": 2,
          "flex": 1,
          "height": 0,
          "marginLeft": -0,
          "position": "absolute",
          "width": 0,
        }
      }
      testID="RNE__Slider_Track_minimum"
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "red",
          "borderRadius": 20,
          "height": 40,
          "position": "absolute",
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
          "width": 40,
        }
      }
      testID="RNE__Slider_Thumb"
    />
    <View
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="RNE__Slider_TouchArea"
    />
  </View>
</View>
`;

exports[`Slider component should render with ThumbTouchRect 1`] = `
<View
  testID="wrapper"
>
  <View
    accessibilityRole="adjustable"
    accessibilityValue={
      Object {
        "max": 100,
        "min": 0,
        "now": 0,
      }
    }
    onLayout={[Function]}
    replaceTheme={[Function]}
    style={
      Object {
        "height": 40,
        "justifyContent": "center",
      }
    }
    testID="RNE__Slider_Container"
    theme={
      Object {
        "colors": Object {
          "black": "#242424",
          "disabled": "hsl(208, 8%, 90%)",
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "platform": Object {
            "android": Object {
              "error": "#f44336",
              "grey": "rgba(0, 0, 0, 0.54)",
              "primary": "#2196f3",
              "searchBg": "#dcdce1",
              "secondary": "#9C27B0",
              "success": "#4caf50",
              "warning": "#ffeb3b",
            },
            "default": Object {
              "error": "#ff3b30",
              "grey": "#7d7d7d",
              "primary": "#007aff",
              "searchBg": "#dcdce1",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
            "ios": Object {
              "error": "#ff3b30",
              "grey": "#7d7d7d",
              "primary": "#007aff",
              "searchBg": "#dcdce1",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
            "web": Object {
              "error": "#ff190c",
              "grey": "#393e42",
              "primary": "#2089dc",
              "searchBg": "#303337",
              "secondary": "#ca71eb",
              "success": "#52c41a",
              "warning": "#faad14",
            },
          },
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#ca71eb",
          "success": "#52c41a",
          "warning": "#faad14",
          "white": "#ffffff",
        },
      }
    }
    updateTheme={[Function]}
    value={0}
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "#b3b3b3",
          "borderRadius": 2,
          "height": 4,
        }
      }
      testID="RNE__Slider_Track_maximum"
    />
    <View
      style={
        Object {
          "backgroundColor": "#3f3f3f",
          "borderRadius": 2,
          "height": 0,
          "marginTop": -0,
          "position": "absolute",
          "width": 0,
        }
      }
      testID="RNE__Slider_Track_minimum"
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "backgroundColor": "red",
          "borderRadius": 20,
          "height": 40,
          "position": "absolute",
          "transform": Array [
            Object {
              "translateX": 0,
            },
          ],
          "width": 40,
        }
      }
      testID="RNE__Slider_Thumb"
    />
    <View
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      style={
        Object {
          "backgroundColor": "orange",
          "bottom": 0,
          "left": 0,
          "opacity": 0.5,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      testID="RNE__Slider_TouchArea"
    >
      <View
        pointerEvents="none"
        style={
          Object {
            "height": 40,
            "left": 0,
            "top": NaN,
            "width": 40,
          }
        }
      />
    </View>
  </View>
</View>
`;
